Fix list and center align the darn standings list!

--- a/website/static/style.css
+++ b/website/static/style.css
@@ -537,6 +537,10 @@ footer a:hover {
     text-align: center;
 }
 
+#standings ul {
+    padding-left: 0;
+}
+
 #standings ul li:nth-child(1) {
     font-size: 1.5em;
     text-shadow: 1px 1px 10px gold;
